# xcore_sdk

./: CMakeLists.txt
applications/: CMakeLists.txt
applications/ffd/: CMakeLists.txt
applications/ffd/bsp_config/XCORE-AI-EXPLORER/: CMakeLists.txt  XCORE-AI-EXPLORER.xn
applications/ffd/inference_engines/: CMakeLists.txt
applications/ffd/src/: app_conf.h  app_conf_check.h  main.c
applications/stlp/: CMakeLists.txt
applications/stlp/audio_pipeline/: CMakeLists.txt
applications/stlp/audio_pipeline/src/adec/: audio_pipeline_dsp.h  audio_pipeline_t0.c  audio_pipeline_t1.c  stage_1.c  stage_1.h
applications/stlp/audio_pipeline/src/fixed_delay/: audio_pipeline_t1.c
applications/stlp/audio_pipeline/src/none/: audio_pipeline.c  audio_pipeline_dsp.h
applications/stlp/src/: FreeRTOSConfig.h  app_conf.h  main.c
examples/: examples.cmake
examples/freertos/explorer_board/: XCORE-AI-EXPLORER.xn  explorer_board.cmake
examples/freertos/explorer_board/src/: main.c
examples/freertos/flash_benchmark/: flash_benchmark.cmake
examples/freertos/flash_benchmark/src/: app_conf.h  main.c
modules/hil/lib_qspi_io/: CMakeLists.txt
modules/hil/lib_qspi_io/api/: qspi_flash.h
modules/hil/lib_qspi_io/src/: qspi_flash.c
modules/hil/lib_xud/: CMakeLists.txt
modules/lib_xs3_math/: CMakeLists.txt
modules/rtos/drivers/qspi_flash/src/: rtos_qspi_flash.c
modules/utils/: CMakeLists.txt
test/rtos_drivers/hil/: hil.cmake
test/rtos_drivers/hil/src/individual_tests/qspi_flash/global/: check_params_test.c
test/rtos_drivers/hil/src/individual_tests/qspi_flash/local/: read_write_read_test.c
